[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["tokio", "http1", "ws"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
futures = "0.3"
hyper = "1.7.0"
sysinfo = "0.37.0"
chrono = "0.4"
tracing = "0.1.41"
tower-http = { version = "0.6.6", features = ["cors"]}
rand = { version = "0.9" }
reqwest = { version = "0.12.23", features = ["json"] }
num_cpus = "1.17.0"
futures-util = "0.3.31"
run = "0.1.0"
rand_core = "0.9.3"
quinn = "0.11"
rustls = { version = "0.23"}
rcgen = "0.14"
once_cell = "1.21.3"
dashmap = "5.5"  
url = "2.4"      
bytes = "1.5"
tokio-rustls = "0.26.2"
webpki-roots = "1.0.2"
socket2 = "0.4"
rand_distr = "0.5.1"
getrandom = "0.3.3"
nanorand = "0.8.0"


[[bin]]
name = "rust"
path = "main.rs"
